product containers pledge text fix color contrast

--- a/style/_about.scss
+++ b/style/_about.scss
@@ -34,7 +34,8 @@
         }
 
         .pledge {
-            color: $moderate-cyan;
+            // color: $moderate-cyan;
+            color: #2A7E79;
             font-weight: 500;
         }
 
